--- a/debs/nbd/debian/changelog
+++ b/debs/nbd/debian/changelog
@@ -1,9 +1,67 @@
-nbd (1:3.15.2-3+puavo1) unstable; urgency=medium
+nbd (1:3.19-3+puavo1) unstable; urgency=medium
 
   * Patched nbd-server for
     https://github.com/NetworkBlockDevice/nbd/issues/96
 
  -- Puavo Org <dev@opinsys.fi>  Wed, 03 Apr 2019 12:11:56 +0300
+
+nbd (1:3.19-3) unstable; urgency=medium
+
+  * debian/control: add docbook-utils to build-depends. This shouldn't
+    strictly be necessary, but it's the quickest fix that allows the
+    package to build again... Closes: #922383
+
+ -- Wouter Verhelst <wouter@debian.org>  Sun, 17 Feb 2019 10:51:59 +0200
+
+nbd (1:3.19-2) unstable; urgency=medium
+
+  * Don't remove nonexisting files...
+
+ -- Wouter Verhelst <wouter@debian.org>  Fri, 15 Feb 2019 06:25:31 +0100
+
+nbd (1:3.19-1) unstable; urgency=medium
+
+  * New upstream release
+  * Document the fact that we're using template units. Closes: #908977.
+  [ Jelmer Vernooij ]
+  * debian/source/format: Set source format to "1.0". Fixes lintian error
+    unknown-source-format.
+
+ -- Wouter Verhelst <wouter@debian.org>  Thu, 14 Feb 2019 14:06:59 +0100
+
+nbd (1:3.18-1) unstable; urgency=medium
+
+  * New upstream release
+  * debian/control: update Vcs-* package fields to point to salsa, not
+    alioth.
+  * debian/control: bump Standards-Version to 4.1.3 (no relevant changes)
+  * debian/control: limit the libnl-genl-dev dependency to linux-any
+    (since nbd-client isn't built on !linux)
+
+ -- Wouter Verhelst <wouter@debian.org>  Sat, 18 Aug 2018 17:19:50 +0200
+
+nbd (1:3.17-2) unstable; urgency=medium
+
+  * Add missing build-dependency on libnl-genl-dev
+
+ -- Wouter Verhelst <wouter@debian.org>  Sat, 17 Mar 2018 22:48:11 +0100
+
+nbd (1:3.17-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Defaults to using the netlink interface rather than the ioctl one.
+
+ -- Wouter Verhelst <wouter@debian.org>  Fri, 16 Mar 2018 19:23:31 +0100
+
+nbd (1:3.16.2-1) unstable; urgency=medium
+
+  * New upstream release
+  * Add missing After=network-online.target to nbd@ systemd unit.
+    Closes: #862531.
+  * Updated translations:
+    - French, by Alban Vidal; closes: #865988
+
+ -- Wouter Verhelst <wouter@debian.org>  Wed, 13 Sep 2017 16:52:45 +0200
 
 nbd (1:3.15.2-3) unstable; urgency=medium
 
