Setup /etc/tmpfiles.d/puavo-utmp-logs.conf for systemd so that "enable_utmp_logs" is actually effective.

--- a/rules/README
+++ b/rules/README
@@ -82,6 +82,9 @@ graphics_drivers
     Setup proprietary nvidia drivers in a such a way they can be used
     (without breaking everything else).
 
+handle_utmp_logs
+    Setup /var/log/utmp and similar with correct permissions.
+
 ibus
     Configurations for ibus.
 
