--- a/debs/openboard/debian/changelog
+++ b/debs/openboard/debian/changelog
@@ -1,3 +1,9 @@
+openboard (1.5.3-0+puavo1) buster; urgency=medium
+
+  * Update to 1.5.3.
+
+ -- Puavo Org <dev@opinsys.fi>  Tue, 16 Apr 2019 07:57:22 +0300
+
 openboard (1.3.6-0+puavo1) buster; urgency=medium
 
   * Initial release.
