--- a/debs/gvfs/debian/changelog
+++ b/debs/gvfs/debian/changelog
@@ -1,3 +1,8 @@
+gvfs (1.38.1-3+puavo1) buster; urgency=high
+
+  * Add the disable_house_arrest_protocol.patch so that iOS-devices work
+    more properly.
+
 gvfs (1.38.1-3) unstable; urgency=high
 
   * Team upload
